--- a/client/Virtual-Farm-Market/index.html
+++ b/client/Virtual-Farm-Market/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/Assets/VFMIcon/VFM-Logo-Main.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Font Awesome-->
@@ -22,8 +26,6 @@
         background-color: #a1dfa48d;
       }
     </style> -->
-
-    
   </head>
 
   <body>
